#5: Added "jackson" to the 3rd party licenses

--- a/src/main/resources/licenses/3rd_party.html
+++ b/src/main/resources/licenses/3rd_party.html
@@ -23,6 +23,7 @@
 <li><em>Apache Log4j</em></li>
 <li><em>Enzo JavaFX controls</em></li>
 <li><em>FontAwesomeFX</em></li>
+<li><em>Jackson &ndash; High-performance JSON processor</em></li>
 <li><em>Spring Framework</em></li>
 </ul>
 </p>
