#5: Explain the bullethorn

--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -31,6 +31,8 @@ You can either use it to trigger various conversion jobs or to monitor a remote 
 <td><b>Options</b><br/>Configuration of this application</td></tr>
 <tr><td><i class="fa fa-info fa-2x fa-fw"></i></td>
 <td><b>About</b><br/>Contains license infomation and the log of this application</td></tr>
+<tr><td><i class="fa fa-bullhorn fa-2x fa-fw"></i></td>
+<td><b>Update Available</b><br/>If this icon is visible a newer version of this Converter Client is available at github.com</td></tr>
 </table>
 
 
