--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -2,7 +2,7 @@
 <head>
 	<title>About this application</title>
 	<link rel="stylesheet" type="text/css" href="css/html.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@ You can either use it to trigger various conversion jobs or to monitor a remote 
 <table>
 <tr><td><i class="fa fa-gears fa-2x fa-fw"></i></td>
 <td><b>Conversion</b><br/>Run misc. conversion jobs with predefinied workflow configurations</td></tr>
-<tr><td><i class="fa fa-tasks fa-2x fa-fw"></i></td>
+<tr><td><i class="fa fa-server fa-2x fa-fw"></i></td>
 <td><b>Server Log</b><br/>Connect to the log of a remote instance of jadice server</td></tr>
 <tr><td><i class="fa fa-area-chart fa-2x fa-fw"></i></td>
 <td><b>JMX</b><br/>Watch the performance of a remote instance of jadice server via JMX</td></tr>
