turn of the year: altered license texts to 2015

--- a/src/main/resources/licenses/levigo_bsd.html
+++ b/src/main/resources/licenses/levigo_bsd.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <pre>
-Copyright (c) 2014, levigo holding gmbh.
+Copyright &copy; 2015, levigo holding gmbh.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification, 
