#15: Mention cluster health view in about text

--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -25,6 +25,8 @@ You can either use it to trigger various conversion jobs or to monitor a remote 
 <td><b>Server Log</b><br/>Connect to the log of a remote instance of jadice server</td></tr>
 <tr><td><i class="fa fa-area-chart fa-2x fa-fw"></i></td>
 <td><b>JMX</b><br/>Watch the performance of a remote instance of jadice server via JMX</td></tr>
+<tr><td><i class="fa fa-heartbeat fa-2x fa-fw"></i></td>
+<td><b>Cluster Health</b><br>Monitor the health of a jadice server cluster at a glance</td></tr>
 <tr><td><i class="fa fa-search fa-2x fa-fw"></i></td>
 <td><b>Inspector</b><br>Inspect a workflow configuration</td></tr>
 <tr><td><i class="fa fa-sliders fa-2x fa-fw"></i></td>
