git-speech: fork a repo, don't clone it

--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -9,10 +9,10 @@
 <h1>jadice server :: Converter Client</h1>
 
 <p>This is a demo application for 
-<a href="http://www.levigo.com/document-management/products/jadice-server/"> <em>levigo<sup>&reg;</sup> jadice server 5</em></a>.
+<a href="http://www.jadice.com/document-management/products/jadice-server/"> <em>levigo<sup>&reg;</sup> jadice server 5</em></a>.
 You can either use it to trigger various conversion jobs or to monitor a remote instance of jadice server.</p>
 
-<p>For the latest version of this client visit <a href="https://github.com/levigo">our github site</a>. You are also welcome to clone the repository, make improvements and send us a pull request.</p>
+<p>For the latest version of this client visit <a href="https://github.com/levigo">our github site</a>. You are also welcome to fork the repository, make improvements and send us a pull request.</p>
 
 <p>If you are interested in a evaluation version of <em>levigo<sup>&reg;</sup> jadice server 5</em> or want get get more information about it, contact us at <a href="mailto:jadice-support@levigo.de">jadice-support@levigo.de</a>.</p>
 
